--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -13,13 +13,12 @@ body,
 }
 
 body {
-    font-family: 'PingFang SC', "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
+    font-family: "PingFang SC", "Helvetica Neue", Helvetica, "microsoft yahei", arial, STHeiTi, sans-serif;
 }
 
 a {
-    text-decoration: none
+    text-decoration: none;
 }
-
 
 .content-box {
     position: absolute;
@@ -28,8 +27,8 @@ a {
     top: 70px;
     bottom: 0;
     padding-bottom: 30px;
-    -webkit-transition: left .3s ease-in-out;
-    transition: left .3s ease-in-out;
+    -webkit-transition: left 0.3s ease-in-out;
+    transition: left 0.3s ease-in-out;
     background: #f0f0f0;
 }
 
@@ -37,7 +36,6 @@ a {
     width: auto;
     height: 100%;
     padding: 10px;
-    overflow-y: scroll;
     box-sizing: border-box;
 }
 
@@ -46,7 +44,9 @@ a {
 }
 
 .container {
-    padding: 30px;
+    --container-padding: 16px;
+    min-height: calc(100vh - var(--container-padding) - var(--container-padding) - 70px - 30px - 20px - 2px);
+    padding: var(--container-padding);
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -70,7 +70,7 @@ a {
     margin-bottom: 20px;
 }
 
-.el-button+.el-tooltip {
+.el-button + .el-tooltip {
     margin-left: 10px;
 }
 
@@ -84,7 +84,7 @@ a {
 
 .move-enter-active,
 .move-leave-active {
-    transition: opacity .1s ease;
+    transition: opacity 0.1s ease;
 }
 
 .move-enter-from,
@@ -111,8 +111,8 @@ a {
     padding-bottom: 0;
 }
 
-
-[class*=" el-icon-"], [class^=el-icon-] {
+[class*=" el-icon-"],
+[class^="el-icon-"] {
     speak: none;
     font-style: normal;
     font-weight: 400;
@@ -124,7 +124,7 @@ a {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-.el-sub-menu [class^=el-icon-] {
+.el-sub-menu [class^="el-icon-"] {
     vertical-align: middle;
     margin-right: 5px;
     width: 24px;
@@ -132,6 +132,58 @@ a {
     font-size: 18px;
 }
 
-[hidden]{
+[hidden] {
     display: none !important;
+}
+
+.el-scrollbar__view {
+    min-height: 100%;
+}
+
+.container-height {
+    --container-padding: 16px;
+    height: calc(100vh - var(--container-padding) - var(--container-padding) - 70px - 30px - 20px - 2px);
+}
+.h100 {
+    height: 100%;
+}
+
+.flex-cloumn {
+    @include flex-cloumn;
+}
+
+.flex {
+    display: flex;
+}
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+}
+.flex-around {
+    display: flex;
+    justify-content: space-around;
+}
+
+.flex1 {
+    @include flex1;
+    .el-card {
+        display: flex;
+        flex-direction: column;
+        .el-card__body {
+            @include flex1;
+        }
+    }
+}
+.el-tabs {
+    height: 100%;
+    @include flex-cloumn;
+    @include flex1;
+    .el-tabs__content {
+        @include flex-cloumn;
+        @include flex1;
+        .el-tab-pane {
+            @include flex-cloumn;
+            @include flex1;
+        }
+    }
 }
